# open-australian-legal-explorer

./: README.md
backend/: README.md  main.py  pyproject.toml  tools_config.json
backend/app/: settings.py
backend/app/api/routers/: chat.py  similarity.py
backend/app/engine/: __init__.py  generate.py  index.py
frontend/: .env  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: chat-section.tsx  domain-constants.ts  header.tsx  playground.tsx
frontend/app/components/ui/: resizable.tsx  select.tsx  table.tsx  tabs.tsx
frontend/app/components/ui/chat/: chat-avatar.tsx  chat-input.tsx  chat-messages.tsx  markdown.tsx
